projekte/k8s-deployments/shuffle-deployment/longhron-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/auth-realm":"Authentication Required","nginx.ingress.kubernetes.io/auth-secret":"basic-auth","nginx.ingress.kubernetes.io/auth-type":"basic","nginx.ingress.kubernetes.io/proxy-body-size":"10000m","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"longhorn-ingress","namespace":"longhorn-system"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"serv [...]
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2025-05-09T11:46:42Z"
  generation: 5
  name: longhorn-ingress
  namespace: longhorn-system
  resourceVersion: "565845"
  uid: be8f07ab-1546-4ce9-80f2-7e2cf54eac8e
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.43.246.75
